--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-remove-scroll": "^2.6.3",
     "react-router-dom": "^7.2.0",
     "vite-jsconfig-paths": "^2.0.1"
   },
